# rexglue-sdk

./: CMakeLists.txt  README.md
.github/workflows/: build-linux-aarch64.yaml  build-linux-amd64.yaml  build-win-amd64.yaml  lint.yaml
cmake/: rexglue_helpers.cmake  rexglue_install.cmake
include/rex/: cvar.h  hook.h  log_capture.h  logging.h  main_android.h  ppc.h  rex_app.h  types.h
src/codegen/: CMakeLists.txt  builders.h  config.cpp  discovery.cpp  function_graph.cpp  function_scanner.cpp  instruction_dispatch.cpp  output.cpp  recompiler.cpp
src/core/: CMakeLists.txt  exception_handler_posix.cpp  fiber_android.cpp  fiber_posix.cpp  fiber_win32.cpp  filesystem_android.cpp  filesystem_posix.cpp  glibc_compat.cpp  logging.cpp  memory_posix.cpp  platform_win.h  sdl3_android_stubs.c  socket_win.cpp  threading_posix.cpp  threading_win.cpp
src/filesystem/: virtual_file_system.cpp
src/graphics/: CMakeLists.txt  command_processor.cpp  flags.cpp  graphics_system.cpp
src/input/: CMakeLists.txt  input_system.cpp
src/input/mnk/: mnk_input_driver.cpp
src/input/xinput/: xinput_input_driver.cpp
src/rexglue/: CMakeLists.txt
src/system/: CMakeLists.txt  function_dispatcher.cpp  gamer_profile.cpp  kernel_state.cpp  runtime.cpp  xfile.cpp  xmemory.cpp  xobject.cpp  xsocket.cpp  xthread.cpp
src/ui/: CMakeLists.txt  achievement_toast.cpp  imgui_drawer.cpp  keybinds.cpp  presenter.cpp  renut_app.h  rex_app.cpp  window_android.cpp  window_gtk.cpp  window_win.cpp  windowed_app_context_android.cpp  windowed_app_context_win.cpp  windowed_app_main_android.cpp
(+98 files in other folders)
